# bicv_skills

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
docs/: code-review-2026-06-29.md  config-spec.md  optimization-plan.md  writing-a-skill.md
docs/issue/: TEMPLATE.md
docs/plans/: plugin-system-plan.md
docs/reference/: environment.md
docs/spec/: dependencies.md  testing-guide.md  writing-a-skill.md
docs/specs/: config-spec.md
skills/_template/: SKILL.md
skills/_template/scripts/: example.py
skills/bug_analysis/: SKILL.md
skills/bug_analysis/references/: charts.md  commands.md  config-schema.md  config.md  report.md
skills/bug_analysis/scripts/: bug_analysis.py  render_charts.py  render_email.py  render_report.py
skills/bug_analysis/tests/: test_bug_analysis.py  test_render_charts.py  test_render_email.py  test_render_report.py
skills/bug_daily_analysis/: SKILL.md  conftest.py
skills/bug_daily_analysis/assets/fonts/: README.md
skills/bug_daily_analysis/references/: charts.md  commands.md  config-schema.md  config.md  report.md
skills/bug_daily_analysis/scripts/: bug_analysis.py  render_charts.py  render_report.py
skills/bug_daily_analysis/tests/: test_bug_analysis.py  test_render_charts.py  test_render_report.py
skills/email/: SKILL.md  conftest.py
skills/email/references/: config-schema.md  usage_guide.md
skills/email/scripts/: _email_config.py  email_api.py
skills/email/tests/: test_email_api.py  test_email_config.py
skills/gerrit-restapi/: SKILL.md  conftest.py
skills/gerrit-restapi/references/: access-endpoints.md  accounts-endpoints.md  changes-endpoints.md  config-endpoints.md  config-schema.md  documentation-endpoints.md  groups-endpoints.md  plugins-endpoints.md  projects-endpoints.md  rest-api-protocol.md  safety-confirmation-matrix.md
skills/gerrit-restapi/scripts/: gerrit_api.py  system_config.py
skills/gerrit-restapi/tests/: test_gerrit_api.py  test_gerrit_config.py
skills/gerrit_analysis/: SKILL.md
skills/gerrit_analysis/references/: config.md  pipeline.md  time-window.md
skills/gerrit_daily_analysis/: SKILL.md
skills/gerrit_daily_analysis/references/: config.md  pipeline.md
skills/jenkins-restapi/: SKILL.md  conftest.py
skills/jenkins-restapi/references/: config-schema.md  jenkins-remote-api.md  safety-confirmation-matrix.md
skills/jenkins-restapi/scripts/: jenkins_api.py  system_config.py
skills/jenkins-restapi/tests/: test_jenkins_api.py  test_jenkins_config.py
skills/jenkins_analysis/: SKILL.md  conftest.py
skills/jenkins_analysis/references/: other-failure-patterns.md  pipeline.md  scm-failure-patterns.md
skills/jenkins_analysis/scripts/: collect.py  fetch.py  report.py
skills/jenkins_analysis/tests/: test_collect.py  test_fetch.py  test_report.py
skills/jenkins_daily_analysis/: SKILL.md
skills/jenkins_daily_analysis/assets/: report-template.md
skills/jenkins_daily_analysis/references/: compile-failure-patterns.md  pipeline.md  scm-failure-patterns.md
skills/jenkins_daily_analysis/scripts/: collect.py  fetch.py  report.py
skills/jenkins_daily_analysis/tests/: test_collect.py  test_fetch.py  test_report.py
skills/mysql/: SKILL.md  conftest.py
skills/mysql/references/: config-schema.md  usage_guide.md
skills/mysql/scripts/: _mysql_config.py  mysql_query.py
skills/mysql/tests/: test_mysql_config.py  test_mysql_query.py
skills/shared/: __init__.py  session_analyzer.py  session_recorder.py  system_config.py
skills/zentao-restapi/: SKILL.md  conftest.py
skills/zentao-restapi/references/: config-schema.md  禅道API协议.md
skills/zentao-restapi/scripts/: system_config.py  zentao_api.py
skills/zentao-restapi/tests/: test_zentao_api.py  test_zentao_config.py
